--- a/HP.css
+++ b/HP.css
@@ -40,7 +40,7 @@ a {
     padding-bottom: 50px;
     color: #f8f8f8;
     text-align: center;
-    background-image: url("intro-bg_1.jpg");
+    background-image: url("intro.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
